--- a/drupal/sites/all/themes/ehl/less/snippet/map.less
+++ b/drupal/sites/all/themes/ehl/less/snippet/map.less
@@ -51,6 +51,7 @@
   max-width: 1375px;
   margin: 0 auto;
   position: relative;
+  z-index: 1;
 }
 
 .imgMap {
